[package]
name = "rust-arduino-motion-lights"
version = "0.1.0"
authors = ["Kyle L. Jensen <kljensen@gmail.com>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
embedded-hal = "*"

[dependencies.arduino-uno]
git = "https://github.com/Rahix/avr-hal"
rev = "536c5d"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

